# EDXD

./: .gitignore  ATTRIBUTION  LICENSE  README.md  VERSIONING.md  WF_Status.md  change-me-for-testing  default.nix  flake.nix  kwinrulesrc  pyproject.toml  rename_journals.sh  requirements.txt  result  test_edxd.sh
EDXD/: ATTRIBUTION  BodyAppraiser.py  README.md  _version.py  body_appraiser.py  ed-eXploration-dashboard.py  ed-mineral-viewer.py  edxd_single_instance.py  flake.nix  globals.py  gobal_constants.py  main.py  model.py  pyproject.toml
EDXD/EDMVData/: 11613456708241.json  2517916142763.json  2815216071441.json  5198009289867.json  5849376168338.json
EDXD/EDXD/: config.json  model.py
EDXD/EDXD/gui/: __init__.py  detail_target.py  table_view.py
EDXD/data_handler/: journal_controller.py  journal_historian.py  journal_reader.py  model.py  planetary_surface_positioning_system.py  status_json_watcher.py  vessel_status.py
EDXD/data_handler/helper/: bio_helper.py  biosign_estimator.py  body_appraiser.py  data_helper.py  pausable_thread.py  system_params.py  system_property_constants.py  technical2humanreadable.py  version_check.py
EDXD/gui/: __init__.py  about_info.py  body_details.py  config.py  config_panel.py  custom_title_bar.py  detail_selected.py  detail_target.py  engine_status.py  journal_historian.py  main_window.py  main_window_options.py  psps_enter_coordinates.py  psps_gui.py  psps_gui_buttons.py  set_mineral_filter.py  signal_prediction.py  status_flags.py  table_view.py  table_view_tkinter.py  theme_handler.py  themed_msg_dialog.py
EDXD/gui/helper/: base_dynamic_controls.py  collapsible_panel.py  dynamic_dialog.py  dynamic_frame.py  font_utils.py  (+12 more)
EDXD/resources/: BodyAppraiser.py  edxd.xcf
EDXD/utils/: clipboard.py  float_range_validator.py  positive_integer_credit_formatter.py
(+25 files in other folders)
