[project]
name = "edxd"
version = "0.4.5.2"
description = "Elite Dangerous eXploration Dashboard"
authors = [{ name = "Kepas Beleglorn", email = "Kepas-Beleglorn@users.noreply.github.com" }]
readme = "README.md"
license='CC BY-NC 4.0'
requires-python = ">=3.9"
dependencies = [
    "watchdog>=3.0.0",
    "wxPython~=4.2.3",
]

[project.scripts]
edxd = "EDXD.__main__:main"

[tool.setuptools.packages.find]
where = ["EDXD"]
